Tpl buildup instead of type params for each attribute